# skeleton-nodejs

./: .dockerignore  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .lintstagedrc.js  .pre-commit-config.yaml  biome.json  bun.lockb  commitlint.config.js  default.nix  devenv.nix  devenv.yaml  entrypoint.sh  eslint.config.mjs  flake.nix  fly.toml  lint-staged.config.js  lock.json  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.base.config.ts  zellij.kdl
.github/workflows/: devenv.yml  leptos-shuttle-api.yml  leptos-shuttle-app.yml  nix-github-actions.yml
.husky/: lint-staged  pre-push
applications/_skeleton-python/: pyproject.toml
applications/_template-purescript/: README.md  devenv.nix  flake.nix  package.json  spago.yaml
applications/_template-python/: .flake8  .gitignore  devenv.nix  flake.nix  pyproject.toml
applications/_template-rust/: Cargo.toml  flake.nix
applications/browser-trader/: .swcrc  package.json  project.json  rspack.config.cjs  tsconfig.build.json  tsconfig.json  vitest.config.ts
applications/debank-scraper/: .env.example  README.md  package.json  pnpm-lock.yaml  project.json  spago.yaml  tsconfig.json
applications/fundr/: README.md  package.json  tsconfig.json
applications/haskell-wasm-framework/: .eslintignore  .gitignore  eslint.config.mjs  flake.nix  haskell-wasm-framework.cabal  package.json  server.ts  stack.yaml  tsconfig.json
applications/haskell-wasm-framework/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
applications/haskell-wasm-framework/doc/tasks/: 3-ssr.md  6-data-fetching-state-management.md
applications/haskell-wasm-framework/docs/tasks/: 1-setup-project.md
applications/haskell-wasm-framework/lib/: Main.hs  MyLib.hs
applications/haskell-wasm-framework/lib/Streams/: ReadableStream.hs  ReadableStreamController.hs  ReadableStreamDefaultController.hs  ReadableStreamSpec.hs  WritableStream.hs  WritableStreamDefaultController.hs  WritableStreamDefaultWriter.hs
applications/haskell-wasm-framework/lib/ts/: http-server.ts  wasi.ts  wasm.ts
applications/haskell-wasm-framework/test/: MainSpec.hs  ReadableStreamSpec.hs  WritableStreamSpec.hs
applications/homebankimport/: README.md  flake.nix  project.json  pyproject.toml
applications/ls/: .gitignore  .prettierignore  .prettierrc.json  README.md  Setup.hs  ls.ts  package.json  project.json  server.ts  tsconfig.json
applications/permutation-generator/: flake.nix  package.json
applications/test-leptos/: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  index.html  leptosfmt.toml  rustfmt.toml
applications/test-leptos/.sass-cache/945d56b79f920d3dd956377d8ee4e813d8feea15/: main.scssc
applications/test-leptos/end2end/: playwright.config.ts
applications/test-leptos/end2end/tests/: example.spec.ts
applications/test-leptos/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
applications/test-leptos/src/common/: errors.rs
applications/test-leptos/src/common/db/: connection.rs
applications/test-leptos/src/components/: counter_btn.rs  mod.rs  my_btn.rs
applications/test-leptos/src/features/projects/application/: dtos.rs  services.rs
applications/test-leptos/src/features/projects/domain/: events.rs  model.rs
applications/test-leptos/src/features/projects/infrastructure/: repository.rs
applications/test-leptos/src/features/projects/presentation/: controllers.rs  views.rs
applications/test-leptos/src/features/tasks/: mod.rs
applications/test-leptos/src/features/tasks/application/: dtos.rs  services.rs
applications/test-leptos/src/features/tasks/domain/: events.rs  model.rs
applications/test-leptos/src/features/tasks/infrastructure/: mappers.rs  repository.rs
applications/test-leptos/src/features/tasks/presentation/: controllers.rs  serializers.rs  views.rs
applications/test-leptos/src/features/users/application/: dtos.rs  services.rs
applications/test-leptos/src/features/users/domain/: events.rs  model.rs
applications/test-leptos/src/features/users/infrastructure/: repository.rs
applications/test-leptos/src/features/users/presentation/: controllers.rs  serializers.rs
applications/test-leptos/src/pages/: home.rs  not_found.rs
applications/test-leptos/tasks/: Cargo.toml  README.md
applications/test-leptos/tasks/src/: app.rs  main.rs
applications/test-rag-pathway/: .dockerignore  .gitignore  Dockerfile  app.yaml  devenv.nix  pyproject.toml
applications/test-rust-api/: .gitignore  Cargo.toml  LICENSE  README.md  Shuttle.toml  build.rs  deny.toml  flake.nix
applications/test-rust-api/end2end/tests/: example.spec.ts
applications/test-rust-api/prompt/: generate-tests.md
applications/test-rust-api/proptest-regressions/streamweave/source/: command.txt
applications/test-rust-api/src/: app.rs  error_template.rs  fileserv.rs  main.rs  streamweave.rs
applications/test-rust-api/src/streamweave/: lib.rs  operator.rs  sink.rs  source.rs
applications/test-rust-api/src/streamweave/operator/: map.rs
applications/test-rust-api/src/streamweave/sink/: http_response.rs
applications/test-rust-api/src/streamweave/source/: array.rs  command.rs  env_var.rs  file.rs  global_variable.rs  hash_map.rs  hash_set.rs  interval.rs  iterator.rs  json_string.rs  mod.rs  mpsc_receiver.rs  random_number.rs  string.rs  tcp_stream.rs  timeout.rs  vec.rs
applications/test-rust-api/style/: main.scss
applications/test-rust-api/tests/: main.rs
applications/testautogen/: .gitignore  README.md  flake.nix  project.json  pyproject.toml
applications/testautogen/test_autogen/: hello.py
applications/testautogen/testautogen/: hello.py
applications/testautogen/tests/: test_hello.py
applications/trader/: MVP.md  (+5 more)
lib/: array.ts  child_process.test.ts  either.ts  exchange.test.ts  exchange.ts  fs.test.ts  market.test.ts  market.ts  pair.test.ts  pair.ts  pairList.test.ts  pairList.ts  record.ts
prompts/: add-tsdoc-documentation.md  fix-problem-with-effect.md  test-fixing.md  test-implementation.md  test-tree.md
(+331 files in other folders)
