[tool.poetry]
name = "python-skeleton"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
ta-lib = "^0.4.25"
plotly = "^5.14.0"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
pyright = "^1.1.301"
isort = "5.12.0"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
