name:               haskell-wasm-framework
version:            0.1.0.0
license:            PublicDomain
license-file:        LICENSE
author:             Tom Wieland
maintainer:         tom.wieland@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:     CHANGELOG.md

-- common warnings
--     ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Main
    build-depends:
        base >=4.20,
        ghc-experimental
    hs-source-dirs:   lib
    default-language: GHC2021

-- test-suite haskell-wasm-framework-test
--     import:           warnings
--     default-language: GHC2021
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:
--         base >=4.20,
--         ghc-experimental
