[tool.poetry]
name = "python-skeleton"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pathway = "^0.16.1"
python-dotenv = "^1.0.1"
mpmath = "^1.3.0"
pandoc = "^2.4"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
flake8 = "7.1.1"
pyright = "^1.1.391"
isort = "5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
