[package]
name = "code9-test-rust-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.7.7", features = ["macros"] }
cargo-shuttle = "0.48.3"
futures = "0.3.31"
hyper = "1.5.0"
proptest = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "stream", "gzip"] }
serde = "1.0.210"
serde_json = "1.0.132"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
tokio-util = "0.7.12"
wasm-bindgen = "0.2.95"
wasm-streams = "0.4.1"
