[package]
name = "code9-test-rust-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.7.7", features = ["macros"], optional = true }
bytes = "1.5.0"
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
futures = "0.3.31"
http = "0.2.12" # Using 0.2.12 to match leptos_axum
http-body = "0.4.6"
http-body-util = "0.1.0"
hyper = { version = "0.14", features = ["full"] } # Match version with http 0.2
leptos = { version = "0.5" }
leptos_axum = { version = "0.5", optional = true }
leptos_meta = { version = "0.5" }
leptos_router = { version = "0.5" }
log = "0.4"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "stream", "gzip"] }
serde = "1.0.210"
serde_json = "1.0.132"
simple_logger = "4"
thiserror = "1.0.38"
tokio = { version = "1.40.0", features = ["full"], optional = true }
tokio-util = "0.7.12"
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.4", features = [
  "fs",
], optional = true } # Match version with http 0.2
tracing = { version = "0.1.37", optional = true }
tracing-log = { version = "0.2.0" }
wasm-bindgen = "0.2.95"
wasm-streams = "0.4.1"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
]
default = ["ssr"]

[build-dependencies]
tokio = { version = "1", features = ["rt"] }
cargo-leptos = "0.1"
clap_builder = "4.4"
camino = "1.1"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "test-project"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:8000"
reload-port = 8001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
